[gd_scene load_steps=7 format=3 uid="uid://1ex86dymtwwy"]

[ext_resource type="Script" path="res://Scenes/GameScenes/Nasius_Cutscene.gd" id="1_v3nat"]
[ext_resource type="PackedScene" uid="uid://dpt5e5h1lypgo" path="res://Scenes/DialogueNodes/Objectinteractions.tscn" id="2_ua2e6"]
[ext_resource type="Resource" uid="uid://bhk070nh670ro" path="res://Scenes/DialogueNodes/Nasius/Nasius.tres" id="3_wvqww"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_kynka"]
file = "res://Assets/MovieSequenz/Nasius_crying.ogg"

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_3h4a4"]
file = "res://Assets/MovieSequenz/PlayerIdel_Scene.ogg"

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_xm3r4"]
file = "res://Assets/MovieSequenz/Black_Background.ogg"

[node name="Nasius_Cutscene" type="Node2D"]
script = ExtResource("1_v3nat")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = 4.99998
offset_right = 30.0
offset_bottom = 45.0
scale = Vector2(41.1656, 21.8203)

[node name="Nasius_crying" type="VideoStreamPlayer" parent="."]
offset_left = 4.0
offset_top = -338.0
offset_right = 2740.0
offset_bottom = 1710.0
scale = Vector2(0.467369, 0.4843)
stream = SubResource("VideoStreamTheora_kynka")

[node name="Player Idel" type="VideoStreamPlayer" parent="."]
z_index = 4
offset_left = 349.0
offset_top = 252.0
offset_right = 3085.0
offset_bottom = 2300.0
scale = Vector2(0.847791, 0.807528)
stream = SubResource("VideoStreamTheora_3h4a4")

[node name="Player walking" type="VideoStreamPlayer" parent="."]
z_index = 4
offset_left = -533.0
offset_top = -369.0
offset_right = 2203.0
offset_bottom = 1679.0
scale = Vector2(0.847791, 0.807528)
stream = SubResource("VideoStreamTheora_xm3r4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ObjectInteractionsDialog" parent="CanvasLayer" instance=ExtResource("2_ua2e6")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
dialogue_data = ExtResource("3_wvqww")
start_id = "NasiusCutscene"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.9
autoplay = true

[connection signal="finished" from="Nasius_crying" to="." method="_on_nasius_crying_finished"]
[connection signal="finished" from="Player Idel" to="." method="_on_player_idel_finished"]
[connection signal="finished" from="Player walking" to="." method="_on_player_walking_finished"]
[connection signal="dialogue_ended" from="CanvasLayer/ObjectInteractionsDialog" to="." method="_on_object_interactions_dialog_dialogue_ended"]
[connection signal="dialogue_signal" from="CanvasLayer/ObjectInteractionsDialog" to="." method="_on_object_interactions_dialog_dialogue_signal"]
